--- a/stinky.html
+++ b/stinky.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js + Rapier Physics Demo</title>
+    <title>🧸 PIP WORLD 🧸</title>
     <style>
         body {
             margin: 0;
